Fix layout break caused by long strings e.g url  (#1093)
* Fix layout break caused by long strings e.g url in activity log notes, fix will apply to activity log and alerts

* Add .text-break helper class with overflow-wrap and word-break

--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -44,6 +44,11 @@ $mappa-colour: #4c2c92;
   white-space: preserve-breaks;
 }
 
+.text-break {
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
+
 .secondary-text--with-break {
   display: block; /* replaces <br> */
 }
